# cross-border-semantic-negotiation

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-server.txt  requirements.txt  run.sh  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  eu_country_request.md
.github/workflows/: ci.yml
demo/: cross_border_demo.html
docs/: README.md
docs/guides/: quick-start.md
examples/: italy_germany_demo.py  sample_data.json
ontologies/: germany_civil_registry.owl  italy_anpr_birth_certificate.owl
src/: __init__.py  cross_border_implementation.py  enhanced_demo.py  enhanced_server.py  server.py
tests/: test_semantic_negotiation.py
tests/compliance/: test_eidas.py  test_eif.py  test_gdpr.py
