[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-border-semantic-negotiation"
version = "1.0.0"
description = "AI-driven semantic negotiation for cross-border digital public services"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Cross-Border Semantic Negotiation Team", email = "contact@semantic-negotiation.eu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/metalevels/cross-border-semantic-negotiation"
Repository = "https://github.com/metalevels/cross-border-semantic-negotiation"
Issues = "https://github.com/metalevels/cross-border-semantic-negotiation/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
